winter vacation/CF_397_2016 ACM Amman Collegiate Programming Contest/compiling_error.txt
F:\ACM\winter vacation\CF_397_2016 ACM Amman Collegiate Programming Contest\B.cpp: In function 'int main(int, const char**)':
F:\ACM\winter vacation\CF_397_2016 ACM Amman Collegiate Programming Contest\B.cpp:8:3: error: 'string' was not declared in this scope
   string num; cin >> num;
   ^
F:\ACM\winter vacation\CF_397_2016 ACM Amman Collegiate Programming Contest\B.cpp:8:3: note: suggested alternatives:
In file included from c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\iosfwd:39:0,
                 from c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\ios:38,
                 from c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\istream:38,
                 from c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\sstream:38,
                 from c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\complex:45,
                 from c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\ccomplex:38,
                 from c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\mingw32\bits\stdc++.h:52,
                 from F:\ACM\winter vacation\CF_397_2016 ACM Amman Collegiate Programming Contest\B.cpp:1:
c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\bits\stringfwd.h:74:33: note:   'std::__cxx11::string'
   typedef basic_string<char>    string;   
                                 ^
c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\bits\stringfwd.h:74:33: note:   'std::__cxx11::string'
F:\ACM\winter vacation\CF_397_2016 ACM Amman Collegiate Programming Contest\B.cpp:8:15: error: 'cin' was not declared in this scope
   string num; cin >> num;
               ^
F:\ACM\winter vacation\CF_397_2016 ACM Amman Collegiate Programming Contest\B.cpp:8:15: note: suggested alternative:
In file included from c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\mingw32\bits\stdc++.h:74:0,
                 from F:\ACM\winter vacation\CF_397_2016 ACM Amman Collegiate Programming Contest\B.cpp:1:
c:\mingw\lib\gcc\mingw32\5.3.0\include\c++\iostream:60:18: note:   'std::cin'
   extern istream cin;  /// Linked to standard input
                  ^
F:\ACM\winter vacation\CF_397_2016 ACM Amman Collegiate Programming Contest\B.cpp:8:22: error: 'num' was not declared in this scope
   string num; cin >> num;
                      ^
